Please enter the commit message for your changes. Lines starting  with '' will be ignored, and an empty message aborts the commit.
 On branch master
 Your branch is up to date with 'origin/master'.

 Changes to be committed:
	modified:   Anchor.toml
	new file:   DEPLOYMENT_CHECKLIST.md
	new file:   FUNCTIONALITY_SUMMARY.md
	new file:   README.md
	modified:   cli/anchorclient.js
	modified:   cli/challenger.js
	modified:   cli/cli.js
	modified:   cli/index.js
	modified:   cli/run2.js
	modified:   cli/runwaldo.js
	modified:   cli/waldo.js
	modified:   data/challenges.json
	new file:   data/mock-blockchain.json
	new file:   deployment-readiness-test.js
	new file:   package-lock.json
	modified:   package.json
	modified:   programs/poloc/src/instructions/initialize_challenge.rs
	modified:   programs/poloc/src/instructions/slash.rs
	modified:   programs/poloc/src/instructions/stake.rs
	modified:   programs/poloc/src/instructions/vote.rs
	modified:   programs/poloc/src/lib.rs
	modified:   programs/poloc/src/mod.rs
	new file:   test-compilation.js
	new file:   test-connections.js
	new file:   test-functionality.js
	new file:   tests/basic-tests.ts
	modified:   tests/poloc.ts
	new file:   tests/test-config.ts
	new file:   wallet.json
	modified:   yarn.lock

--- a/Anchor.toml
+++ b/Anchor.toml
@@ -5,7 +5,7 @@ package_manager = "yarn"
 resolution = true
 skip-lint = false
 
-[programs.localnet]
+[programs.devnet]
 poloc = "7Nvgy5gA716LrWo76Xha9NDaCsJT81JFPFKB23BHJzrn"
 
 [registry]
