--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "type": "module",
   "license": "ISC",
   "scripts": {
     "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
@@ -13,27 +12,29 @@
     "clean": "anchor clean"
   },
   "dependencies": {
-    "@coral-xyz/anchor": "^0.31.1",
-    "@project-serum/anchor": "^0.25.0",
-    "@solana/web3.js": "^1.78.0",
-    "commander": "^9.4.1",
-    "mathjs": "^11.11.0",
-    "inquirer": "^8.2.5",
+    "@coral-xyz/anchor": "^0.28.0",
+
+    "@solana/web3.js": "^1.98.4",
+    "bs58": "^5.0.0",
     "chalk": "^4.1.2",
+    "commander": "^9.4.1",
+    "dgram": "^1.0.1",
+    "inquirer": "^8.2.5",
+    "mathjs": "^11.11.0",
     "ora": "^5.4.1",
     "table": "^6.8.1",
-    "dgram": "^1.0.1"
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
-    "chai": "^4.3.4",
-    "mocha": "^9.0.3",
-    "ts-mocha": "^10.0.0",
     "@types/bn.js": "^5.1.0",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.0.0",
-    "typescript": "^5.7.3",
-    "prettier": "^2.6.2",
+    "@types/node": "^18.0.0",
+    "chai": "^4.3.4",
     "jest": "^29.0.0",
-    "@types/node": "^18.0.0"
+    "mocha": "^9.0.3",
+    "prettier": "^2.6.2",
+    "ts-mocha": "^10.0.0",
+    "typescript": "^5.7.3"
   }
 }
