--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "clean": "anchor clean"
   },
   "dependencies": {
-    "@coral-xyz/anchor": "^0.28.0",
-
+    "@coral-xyz/anchor": "0.31.1",
     "@solana/web3.js": "^1.98.4",
     "bs58": "^5.0.0",
     "chalk": "^4.1.2",
