--- a/Anchor.toml
+++ b/Anchor.toml
@@ -12,7 +12,7 @@ poloc = "DD4EFbG6h1HNNGm51wS4HWBvsquEhPZbC2qcCnYBRmQ"
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "devnet"
+cluster = "localnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
